# rglauncher

./: .gitmodules  Cargo.toml  README.org
crates/rglauncher-clip-db/: Cargo.toml
crates/rglauncher-clip-db/src/: connection.rs  lib.rs  queries.rs  types.rs
crates/rglauncher-clip-db/src/queries/: count_entries.sql  delete_all.sql  delete_entry.sql  delete_old.sql  get_all.sql  get_entry.sql  trim_entries.sql  upsert_post.sql
crates/rglauncher-clip-writer/: Cargo.toml
crates/rglauncher-clip-writer/src/: main.rs
crates/rglauncher-core/: Cargo.toml
crates/rglauncher-core/src/: config.rs  dispatcher.rs  lib.rs
crates/rglauncher-core/src/plugins/: app.rs  clip.rs  mod.rs  win.rs
crates/rglauncher-gtk/: Cargo.toml
crates/rglauncher-gtk/src/: arguments.rs  iconcache.rs  launcher.rs  main.rs  resulthandler.rs  sidebar.rs  window.rs
crates/rglauncher-gtk/src/application/: imp.rs
crates/rglauncher-gtk/src/pluginpreview/: clipboard.rs  mod.rs
crates/rglauncher-gtk/src/sidebarrow/: mod.rs  sidebarrow.ui
crates/rglauncher-gtk/src/styles/: layout.css
data/: config.toml
