[workspace]

members = ["crates/rglauncher-core", "crates/rglauncher-gtk", "vendor/mdict"]
exclude = ["crates/chin-tools"]

resolver = "2"

[workspace.dependencies]
chin-tools = { path = "crates/chin-tools/crates/chin-tools" }
chin-wayland-utils = { path = "crates/chin-tools/crates/chin-wayland-utils" }

[profile.release]
lto = true
opt-level = 3
