[package]
name = "rglauncher-clip-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled", "functions"] }
miette = { version = "7.6", features = ["fancy"] }
tracing = { version = "0.1" }
regex = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
